add media query for mobile device

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div id="gambar">
 				<img src="asset\baru.jpg" />
 				<h4>Syarifudin</h4>
-				<h5> Web Developer | Cat Lovers</h5>
+				<h5>Front-End Developer | Cat Lovers</h5>
 			</div>
 		</div>
 
