--- a/index.html
+++ b/index.html
@@ -134,7 +134,18 @@
 		</div>
 
 
+<!-- add javascript -->
 
+<script>
+	
+	let user = prompt("What's your name?");
+
+	alert('hallo ' + user + ' nice to meet you ');
+
+
+
+
+</script>
 
 
 </body>
