fixed image position

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 
 <script>
 	
-	let user = prompt("What's your name?");
+	/*let user = prompt("What's your name?");
 
-	alert('hallo ' + user + ' nice to meet you ');
+	alert('hallo ' + user + ' nice to meet you ');*/
 
 /* add function */
 
@@ -158,7 +158,7 @@ const changeJobsTitle = (job) => {
 }
 
 // call function 
-changeJobsTitle('Front-End | Cat Lovers');
+changeJobsTitle('Front-End Developer | Cat Lovers');
  
 
 
