--- a/index.html
+++ b/index.html
@@ -136,33 +136,7 @@
 
 <!-- add javascript -->
 
-<script>
-	
-	/*let user = prompt("What's your name?");
-
-	alert('hallo ' + user + ' nice to meet you ');*/
-
-/* add function */
-
-const changeJobsTitle = (job) => {
-	const JobsTitle = document.getElementsByTagName('h5');
-
-	if (typeof job === 'string'){
-	
-		JobsTitle[0].innerText = job;
-
-	} else {
-		JobsTitle[0].innerText = "Alert: Jobs Title must be string!";
-	}
-
-}
-
-// call function 
-changeJobsTitle('Front-End Developer | Cat Lovers');
- 
-
-
-</script>
+<script src="script.js" type="text/javascript"></script>
 
 
 </body>
