--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	
 	<!-- Navbar -->
 		<div class="navbar-top">
-				<a id="active" href="#home">Syarifudin</a>
-				<a href="#about">About me </a>			
-				<a href="#myskills">My Skills </a>			
-				<a href="#contact">Contact me </a>			
+				<a class="page-scroll" id="active" href="#home">Syarifudin</a>
+				<a class="page-scroll" href="#about">About me </a>			
+				<a class="page-scroll" href="#myskills">My Skills </a>			
+				<a class="page-scroll" href="#contact">Contact me </a>			
 		</div>
 
 	<!-- jumbotron -->
@@ -98,7 +98,7 @@
 
 				<div class="icon">
 				<div class="telp">
-					<img src="asset\Whatsapp.png" alt="img-tlp" />
+					<img src="asset\Whatsapp.png" alt="page-scroll img-tlp" />
 						<h4> +62 85718687011 </h4>	
 				</div>
 				
@@ -134,9 +134,15 @@
 		</div>
 
 
-<!-- add javascript -->
 
-<script src="script.js" type="text/javascript"></script>
+	<!-- add Jquery -->
+	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+
+	<!-- add Jquery easing -->
+	<script src="jquery.easing.1.3.js" type="text/javascript"></script>
+	
+	<!-- add javascript -->
+	<script src="script.js" type="text/javascript"></script>
 
 
 </body>
