add bootstrap & jquery for myskills

--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
 							<span class="javascript"></span>
 					</span>
 				</li>
+
+					<!-- BOOTSTRAP -->
+				<li>
+					<h3>BOOTSTRAP</h3>
+						<span class="bar">
+							<span class="bootstrap"></span>
+					</span>
+				</li>
+					
+					<!-- JQUERY -->
+				<li>
+					<h3>JQUERY</h3>
+						<span class="bar">
+							<span class="jquery"></span>
+					</span>
+				</li>
 					
 				</div>
 			</div>
