--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- jumbotron -->
 		<div class="jumbotron" id="home">
 			<div id="gambar">
-				<img src="asset\baru.jpg" />
+				<img src="asset\Syarif udin.jpeg" />
 				<h4>Syarifudin</h4>
 				<h5>Front-End Developer | Cat Lovers</h5>
 			</div>
