change content about me

--- a/index.html
+++ b/index.html
@@ -40,17 +40,13 @@
 				</div>
 
 				<div class="content">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>Hello my friends this is my Portfolio page and as you can see , 
+this my first time i created Portfolio of myself and this
+Portfolio built with self-taugh and learn some course and videos tutorial on youtube especially at my favourite place for
+learn progamming language for build website is Web Programming UNPAS and Wegodev , and keep learn from that
+so let me introduce myself , my name is syarifudin you can call me "Syarif" and i live in Jakarta
+and i had learn programming language like : HTML5 , CSS3 , JavaScript and some Framework like : Bootstrap
+and Jquery, See below for more, Declare variable not War</p>
 				</div>
 			</section>
 
